# wraiths-core

./: .copilotignore  .editorconfig  .env.example  .gitmodules  .mcp.json  .pre-commit-config.yaml  CODEOWNERS  CODESPACES.md  Dockerfile  Makefile  README.md  cursor.context.urls.txt  cursor.project.rules.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
cursor.prompts/: system.architect.md  task.add-endpoint.md  task.generate-service.md
specs/event-schema/: v1.0.json
src/: main.py
templates/service-template/: Dockerfile  app.py
tests/: conftest.py  test_lifespan.py  test_main.py
